--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <title>Rajan Julka</title>
-<link rel="stylesheet" href="https://github.com/rajanjulka/Introduction/blob/master/styles.css">
+<link rel="stylesheet" href="https://raw.githubusercontent.com/rajanjulka/Introduction/master/styles.css">
 </head>
 
 <body >
